--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "tailwind:css": "npx tailwindcss -i public/styles/tailwind.css  -o public/styles/style.css --watch"
+    "tailwind:css": "npx tailwindcss -i public/styles/global.css  -o public/styles/style.css --watch"
   },
   "repository": {
     "type": "git",
